# django-boilerplate

./: .gitignore  pyproject.toml
backend/: README.md  manage.py
backend/backend/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
backend/backend/templates/: base.html
backend/backend/users/: admin.py
backend/backend/users/tests/: test_urls.py  test_views.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  local.py  production.py
